--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   provider: ^6.0.2
   easy_localization: ^3.0.0
   intl: ^0.17.0
+  flutter_quill: ^4.1.3
 
 dev_dependencies:
   flutter_test:
