--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   easy_localization: ^3.0.0
   intl: ^0.17.0
   flutter_quill: ^4.1.3
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
