--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,9 +44,10 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.devnote"
-        // minSdkVersion flutter.minSdkVersion
-        minSdkVersion 23
-        targetSdkVersion 29
+        minSdkVersion 30
+        targetSdkVersion flutter.targetSdkVersion
+        // minSdkVersion 23
+        // targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
